<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="isHomeMaker">Are you HomeMaker?</string>
    <string name="logo_desc">Logo</string>
    <string name="log_in">I already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo_header">TIFFIN SERVICE</string>
    <string name="REGISTRATION_GREETING_KEY">registration_greeting</string>
    <string name="app_name">Tiffin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="registration_greeting">Account has been created \n
        Please verfiy your email address</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sucess_payment_text">Payement Success!</string>
    <string name="error_payment_text">Abort!</string>
    <string name="sucess_payment_note">We have sent receipt at your Email Address</string>
    <string name="sucess_payment_btn">Got it!</string>
    <string name="error_payment_btn">Abort!</string>

</resources>