<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    tools:context=".MainActivity"
    android:id="@+id/main_layout">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="69dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:srcCompat="@drawable/singinuplogo" />

    <TextView
        android:id="@+id/Tiffin_Service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="260dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="TIFFIN SERVICE"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="115dp"
        android:background="@color/buttoncolor"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/user"
        android:fontFamily="@font/hankenbook"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:singleLine="true"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button"
        android:layout_marginTop="-115dp"
        android:background="@color/buttoncolor"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/email"
        android:fontFamily="@font/hankenbook"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:singleLine="true"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />
</RelativeLayout>