<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/first_section"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@color/blue"
        android:gravity="center">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@mipmap/baseline_check_circle_outline_white_18dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity=""
        android:orientation="vertical">

        <TextView
            android:id="@+id/success_message_top"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sucess_payment_text"
            android:textColor="#0B6623"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sucess_payment_text"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/success_message_top"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/sucess_payment_note"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Transaction Details:"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="Transaction Id "
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="Package Cost"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/transaction_id_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ABCDEF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/package_cost_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ABCDEF"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/finish_payment_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="30dp"
            android:background="#0B6623"
            android:padding="3dp"
            android:text="@string/sucess_payment_btn"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>